<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.RegistrarActivity">

    <LinearLayout
        android:id="@+id/contenedorLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/introduce_tu_nombre"
            android:inputType="text" />

        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/EditTextApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_tus_apellidos" />

        <Space
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:id="@+id/space3"
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonAceptar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/aceptar"
                android:layout_weight="1"/>

            <Space
                android:id="@+id/space4"
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/botonCancelar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancelar"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>